# production-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: PROJECT_PLAN.md
evaluation/: evaluator.py  metrics.py
examples/: evaluation_demo.py
infra/observability/: README.md
infra/observability/alloy/: config.alloy
infra/observability/grafana/dashboards/: rag-overview.json
rag/: __init__.py  core.py
rag/config/: __init__.py  model_registry.py  settings.py
rag/embeddings/: __init__.py  fake.py
rag/interfaces/: __init__.py  protocols.py
rag/observability/: __init__.py  logging.py  metrics.py  watch.py
rag/query/: analyzer.py  optimizer.py
rag/retrieval/: base.py  bm25_retriever.py  hybrid.py  reranker.py  semantic.py
rag/utils/: __init__.py  device.py
scripts/: gpu_budget.py
tests/: conftest.py
tests/unit/: test_config.py  test_device.py  test_embeddings.py  test_interfaces.py  test_metrics.py  test_observability.py  test_pipeline.py  test_query.py  test_retrieval.py
